--- a/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
@@ -130,7 +130,7 @@
 		if (noticia.BundleId > 0)
 		{
 			<div>
-				<Bundle bundleId="@noticia.BundleId" idioma="@idioma" tipo="Bundle.Tipo.Noticia" usuario="@usuario"/>
+				<Bundle bundleId="@noticia.BundleId" idioma="@idioma" tipo="Bundle.Tipo.Noticia" usuarioId="@usuario?.Id"/>
 			</div>
 		}
 	}
