--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -38,7 +38,7 @@
 
 	if (usuarioLogeado == true)
 	{
-		@if (adminLogeado == true)
+		if (adminLogeado == true)
 		{
 			@(await Html.RenderComponentAsync<Componentes.Admin.Juego>(RenderMode.Server, new
 			{
